--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,15 @@
     package="com.example.chahat.anotode">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/anotodelogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -21,13 +26,49 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_welcome"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".LogInActivity" />
+        <activity
+            android:name=".SignUpActivity"
+            android:theme="@style/AppTheme.Fullscreen" />
+        <activity
+            android:name=".LogInActivity"
+            android:theme="@style/AppTheme.Fullscreen" />
         <activity
             android:name=".AnotodeStore"
             android:label="@string/title_activity_anotode_store"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".AddNotesActivity"></activity>
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
+        </activity>
+        <activity android:name=".AddNotesActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".HighlightEdit" />
+        <activity android:name=".NotesEdit" />
+        <activity android:name=".highlight_detail" />
+        <activity android:name=".note_detail" />
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".ChangeUsernameActivity" />
+        <activity android:name=".ChangePwdActivity" />
+        <activity android:name=".SearchResultActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@layout/searchable" />
+        </activity>
+        <activity android:name=".ChangeProfileActivity"></activity>
     </application>
 
 </manifest>
